--- a/templates/templates/login.html
+++ b/templates/templates/login.html
@@ -3,7 +3,7 @@
 {% block body %}
 <center>
 <h3 style="margin-top:2%;">Login</h3>
-<form action="{% url 'login:login' %}{{ get }}" method="post">
+<form action="{{ request.get_full_path }}" method="post">
 {%  csrf_token %}
     <table class="table" style="width:80%;">
     <tr><td style="width:20%;">Your username/email:</td><td>{{ form.username.errors }}<input type="text" data-role="input" id="id_username" name="username"></td></tr>
