--- a/templates/templates/request_verify.html
+++ b/templates/templates/request_verify.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <h3>Trigger Verification</h3>
-You are registered as a student of {{ institute }} with instite email of {{ email }}.<br/>
+You are registered as a student of {{ institute }} with institute email of {{ email }}.<br/>
 If this information is not correct please edit your information on your profile on the footloose website first.<br/>
 After clicking the button below the system will send you a link to your institute email. Simply follow that link while logged in to complete the verification. You only have to do this once every academic year.
 <form method="post">
