added list of verifications for staff member

--- a/templates/templates/base.html
+++ b/templates/templates/base.html
@@ -20,6 +20,7 @@
                 {% if user.is_staff %}
                     <li><a href="{% url 'students:listall' %}">All members</a></li>
                     <li><a href="{% url 'students:listallsubmissions' %}">All submissions</a> </li>
+                    <li><a href="{% url 'students:listverifications' %}">All verifications</a> </li>
                 {% else  %}
                     <li><a href="{% url 'students:verify_request' %}">Verify</a></li>
                 {% endif %}
