moved vps interaction to seperate class. added listing members interested in committees

--- a/templates/templates/base.html
+++ b/templates/templates/base.html
@@ -21,6 +21,7 @@
                     <li><a href="{% url 'students:listall' %}">All members</a></li>
                     <li><a href="{% url 'students:listallsubmissions' %}">All submissions</a> </li>
                     <li><a href="{% url 'students:listverifications' %}">All verifications</a> </li>
+                    <li><a href="{% url 'students:listinterestedmembers' %}">All interested</a> </li>
                 {% else  %}
                     <li><a href="{% url 'students:verify_request' %}">Verify</a></li>
                 {% endif %}
