--- a/templates/templates/base.html
+++ b/templates/templates/base.html
@@ -22,6 +22,17 @@
                     <li><a href="{% url 'students:listallsubmissions' %}">All submissions</a> </li>
                     <li><a href="{% url 'students:listverifications' %}">All verifications</a> </li>
                     <li><a href="{% url 'students:listinterestedmembers' %}">All interested</a> </li>
+                    <li>
+                         <a href="#" class="dropdown-toggle">Analysis</a>
+                         <ul class="d-menu" data-role="dropdown">
+                             <li><a href="{% url 'analysis:stats' %}">Statistics</a></li>
+                            <li><a href="{% url 'analysis:listall' %}">List All</a> </li>
+                             {% if user.is_superuser %}
+                             <li><a href="{% url 'analysis:importmembers' %}">Import Members</a> </li>
+                                 <li><a href="{% url 'analysis:uploadsubscriptions' %}">Upload Subscriptions</a> </li>
+                             {% endif %}
+                         </ul>
+                    </li>
                 {% else  %}
                     <li><a href="{% url 'students:verify_request' %}">Verify</a></li>
                 {% endif %}
