--- a/templates/templates/login.html
+++ b/templates/templates/login.html
@@ -12,6 +12,7 @@
     <table class="table" style="width:80%;">
     <tr><td style="width:20%;">Your username/email:</td><td>{{ form.username.errors }}<input type="text" data-role="input" id="id_username" name="username"></td></tr>
     <tr><td style="width:20%;">Your password:</td><td>{{ form.password.errors }}<input type="password" data-role="input"  id="id_password" name="password"></td></tr>
+    <tr><td></td><td>{{ form.captcha }}</td></tr>
     <tr><td></td><td><input class="button success" type="submit" value="Login"></td></tr>
     </table>
 </form>
