--- a/templates/templates/base.html
+++ b/templates/templates/base.html
@@ -20,8 +20,14 @@
             <li><a href="/">Home</a> </li>
             {% if user.is_authenticated %}
                 {% if user.is_staff %}
-                    <li><a href="{% url 'students:listall' %}">All members</a></li>
-                    <li><a href="{% url 'students:listallsubmissions' %}">All submissions</a> </li>
+                    <li>
+                        <a href="#" class="dropdown-toggle">Member List</a>
+                        <ul class="d-menu" data-role="dropdown">
+                            <li><a href="{% url 'students:listall' "wp" %}">Personal details</a> </li>
+                            <li><a href="{% url 'students:listall' "db" %}">Member details</a> </li>
+                        </ul>
+                    </li>
+                    <li><a href="{% url 'students:listsubmissions' %}">All submissions</a> </li>
                     <li><a href="{% url 'students:listverifications' %}">All verifications</a> </li>
                     <li><a href="{% url 'students:listinterestedmembers' %}">All interested</a> </li>
                     <li>
@@ -56,7 +62,7 @@
             {% endautoescape %}
         {% endblock %}
 
-        {% recaptcha_init %}
+{#        {% recaptcha_init %}#}
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
