--- a/templates/templates/base.html
+++ b/templates/templates/base.html
@@ -1,5 +1,4 @@
 {% load staticfiles %}
-{% load recaptcha2 %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -30,17 +29,17 @@
                     <li><a href="{% url 'students:listsubmissions' %}">All submissions</a> </li>
                     <li><a href="{% url 'students:listverifications' %}">All verifications</a> </li>
                     <li><a href="{% url 'students:listinterestedmembers' %}">All interested</a> </li>
-                    <li>
-                         <a href="#" class="dropdown-toggle">Analysis</a>
-                         <ul class="d-menu" data-role="dropdown">
-                             <li><a href="{% url 'analysis:stats' %}">Statistics</a></li>
-                            <li><a href="{% url 'analysis:listall' %}">List All</a> </li>
-                             {% if user.is_superuser %}
-                             <li><a href="{% url 'analysis:importmembers' %}">Import Members</a> </li>
-                                 <li><a href="{% url 'analysis:uploadsubscriptions' %}">Upload Subscriptions</a> </li>
-                             {% endif %}
-                         </ul>
-                    </li>
+{#                    <li>#}
+{#                         <a href="#" class="dropdown-toggle">Analysis</a>#}
+{#                         <ul class="d-menu" data-role="dropdown">#}
+{#                             <li><a href="{% url 'analysis:stats' %}">Statistics</a></li>#}
+{#                            <li><a href="{% url 'analysis:listall' %}">List All</a> </li>#}
+{#                             {% if user.is_superuser %}#}
+{#                             <li><a href="{% url 'analysis:importmembers' %}">Import Members</a> </li>#}
+{#                                 <li><a href="{% url 'analysis:uploadsubscriptions' %}">Upload Subscriptions</a> </li>#}
+{#                             {% endif %}#}
+{#                         </ul>#}
+{#                    </li>#}
                 {% else  %}
                     {% if user.username == 'prcommissie' %}
                     <li><a href="{% url 'analysis:stats' %}">Statistics</a></li>
