--- a/templates/templates/mail/verify.html
+++ b/templates/templates/mail/verify.html
@@ -1,5 +1,12 @@
-This is a message from the Footloose student verify system. Please go to the following link to complete verification:<br/>
-<a href="{{ url }}">{{ url }}</a><br/>
-
-Kind regards<br/>
-the Footloose ict committee.
+Dear member, <br/>
+<br/>
+Since Footloose is a student association we have to check whether our members are truly students. For this reason we send this email to your student email address to verify your student status.<br/>
+<br/>
+Click on the link below to confirm that you are a student. Please confirm your student status as soon as possible so we can continue processing the data of our members.<br/>
+<a href="{{ url }}">{{ url }}</a><br/><br/>
+<br/>
+Thank you in advance!<br/>
+<br/>
+Kind regards,<br/>
+<br/>
+ESDV Footloose
