adjusted verify email further

--- a/templates/templates/mail/verify.html
+++ b/templates/templates/mail/verify.html
@@ -5,6 +5,8 @@ Since Footloose is a student association we have to check whether our members ar
 Click on the link below to confirm that you are a student. Please confirm your student status as soon as possible so we can continue processing the data of our members.<br/>
 <a href="{{ url }}">{{ url }}</a><br/><br/>
 <br/>
+Please note that if you have received multiple of these emails in error, you can safely ignore the previous emails. Our apologies for the confusion.<br/>
+<br/>
 Thank you in advance!<br/>
 <br/>
 Kind regards,<br/>
