save ip to confirmation

--- a/templates/templates/list_all_verifications.html
+++ b/templates/templates/list_all_verifications.html
@@ -8,6 +8,7 @@
     <th>user</th>
     <th>email</th>
     <th>date</th>
+    <th>IP</th>
 </tr>
 </thead>
 <tbody>
@@ -16,6 +17,7 @@
     <td>{{ confirmation.user }}</td>
     <td>{{ confirmation.email }}</td>
     <td>{{ confirmation.date }}</td>
+    <td>{{ confirmation.ip }}</td>
 </tr>
 {% endfor %}
 </tbody>
