--- a/templates/templates/base.html
+++ b/templates/templates/base.html
@@ -27,7 +27,14 @@
                         </ul>
                     </li>
                     <li><a href="{% url 'students:listsubmissions' %}">All submissions</a> </li>
-                    <li><a href="{% url 'students:listverifications' %}">All verifications</a> </li>
+                    <li>
+                        <a href="#" class="dropdown-toggle">Verification System</a>
+                        <ul class="d-menu" data-role="dropdown">
+                            <li><a href="{% url 'students:listverifications' %}">All Confirmations</a> </li>
+                            <li><a href="{% url 'students:listinvalids' %}">Invalids</a> </li>
+                        </ul>
+                    </li>
+
                     <li><a href="{% url 'students:listinterestedmembers' %}">All interested</a> </li>
 {#                    <li>#}
 {#                         <a href="#" class="dropdown-toggle">Analysis</a>#}
