first part of manual distribute

--- a/templates/static/css/custom.css
+++ b/templates/static/css/custom.css
@@ -14,7 +14,7 @@ td.admitted {
 
 td.rejected {
     height: 250px;
-    background-color: red;
+    background-color: indianred;
     border: 1px solid white;
 }
 
