fixed csv export submissions

--- a/templates/templates/list_all_submissions.html
+++ b/templates/templates/list_all_submissions.html
@@ -4,7 +4,7 @@
 {% block body %}
 <h3>All Submissions</h3>
 <a href="{% url 'students:listallsubmissionscsv' %}"><button class="button success large rounded">CSV</button></a>
-    <a href="{% url 'students:listallsubmissionsunmergedcsv' %}"><button class="button success large rounded">CSV unmerged</button></a>
+{#    <a href="{% url 'students:listallsubmissionsunmergedcsv' %}"><button class="button success large rounded">CSV unmerged</button></a>#}
 <div style="overflow-x: scroll;">
 <table class="table striped table-border" data-role="table" data-rows="100">
 <thead>
