--- a/templates/templates/base.html
+++ b/templates/templates/base.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css">
+        <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4.2.47/css/metro-all.min.css">
 {#        <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/css/select2.min.css" rel="stylesheet" />#}
         <link rel="stylesheet" href="{% static 'css/custom.css' %}">
         {% block stylesheets %}
@@ -47,7 +47,8 @@
 {#                             {% endif %}#}
 {#                         </ul>#}
 {#                    </li>#}
-                    <li><a href="{% url 'distribution:listcoursetypes' %}">Distribution</a> </li>
+                    <li><a href="{% url 'distribution:listcoursetypes' %}">Manual Distribution</a> </li>
+                    <li><a href="{% url 'distribution:automaticdistribute_step1' %}">Automatic Distribution</a> </li>
                 {% else  %}
                     {% if user.username == 'prcommissie' %}
                     <li><a href="{% url 'analysis:stats' %}">Statistics</a></li>
@@ -71,7 +72,7 @@
 
 {#        {% recaptcha_init %}#}
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
+        <script src="https://cdn.metroui.org.ua/v4.2.47/js/metro.min.js"></script>
 {#        <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/js/select2.min.js"></script>#}
         {% block scripts %}
 
