--- a/templates/templates/confirm.html
+++ b/templates/templates/confirm.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<h3>Confirm {{ subject }}</h3>
+<h3>{{ subject }}</h3>
 <table class="table">
 <form action="{{ request.get_full_path }}" method="post">
 {%  csrf_token %}
