kick out non partner couples for partner dances

--- a/templates/templates/distribution.html
+++ b/templates/templates/distribution.html
@@ -40,7 +40,7 @@
 <thead>
 <tr>
 {% for course in courses %}
-    <th>{{ course.0 }}
+    <th>{{ course.0 }} Couple limit: {{ course.0.limit }}
 {#        <button onclick="save_course('{{ course.0.get_machine_name }}');" class="button success">Save</button>#}
     </th>
 {% endfor %}
