--- a/templates/templates/index.html
+++ b/templates/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<h2>Welcome to the Footloose student portal</h2>
+<h2>Welcome to the Footloose Memberhsip database</h2>
 {% if user.is_authenticated %}
 
 {% else %}
