added counter tokens

--- a/templates/templates/list_all_verifications.html
+++ b/templates/templates/list_all_verifications.html
@@ -2,6 +2,8 @@
 
 {% block body %}
 <h3>All Verifications</h3>
+Number of successfull confirmations: {{ numconfirmations }}<br/>
+Number of outstanding tokens: {{ numverifytokens }}<br/>
 <table class="table striped table-border" data-role="table" data-rows="100">
 <thead>
 <tr>
