--- a/templates/templates/list_all_students.html
+++ b/templates/templates/list_all_students.html
@@ -7,7 +7,8 @@
 
 {% block body %}
 <h3>All students</h3>
-<a href="{% url 'students:listallcsv' type %}"><button class="button success large rounded">CSV</button></a>
+<a class="button success large" href="{% url 'students:listallcsv' type %}">CSV</a>
+<a class="button warning large" href="{% url 'students:listall' type 1 %}">Unverified only</a>
 <div style="overflow-x: scroll;">
 <table class="table striped table-border" data-role="table" data-rows="100">
 <thead>
