added distribution lists and csv exports

--- a/templates/templates/distribution.html
+++ b/templates/templates/distribution.html
@@ -35,7 +35,8 @@
 
 {% block body %}
 <h1>Distribute for course type {{ type }}</h1>
-<button onclick="save_all();" class="button success">Save all</button><a href="" class="button warning">Mail all</a>
+<button onclick="save_all();" class="button success">Save all</button>
+{#    <a href="" class="button warning">Mail all</a>#}
 <table class="table">
 <thead>
 <tr>
