--- a/templates/templates/base.html
+++ b/templates/templates/base.html
@@ -47,8 +47,15 @@
 {#                             {% endif %}#}
 {#                         </ul>#}
 {#                    </li>#}
-                    <li><a href="{% url 'distribution:listcoursetypes' %}">Manual Distribution</a> </li>
-                    <li><a href="{% url 'distribution:automaticdistribute_step1' %}">Automatic Distribution</a> </li>
+                    <li>
+                        <a href="#" class="dropdown-toggle">Distribution</a>
+                        <ul class="d-menu" data-role="dropdown">
+                            <li><a href="{% url 'distribution:listcoursetypes' %}">Manual Distribution</a> </li>
+                            <li><a href="{% url 'distribution:automaticdistribute_step1' %}">Automatic Distribution</a> </li>
+                            <li><a href="{% url 'distribution:listdistributions' %}">List all distributed couples</a> </li>
+                        </ul>
+                    </li>
+
                 {% else  %}
                     {% if user.username == 'prcommissie' %}
                     <li><a href="{% url 'analysis:stats' %}">Statistics</a></li>
