--- a/templates/templates/stats.html
+++ b/templates/templates/stats.html
@@ -1,29 +1,42 @@
 {% extends 'base.html' %}
 
+{% block stylesheets %}
+<style>
+.small {
+	width: 30%;
+}
+</style>
+{% endblock %}
+
 {% block body %}
-<center>
-<form action="{{ request.get_full_path }}" method="post">
-{% csrf_token %}
-<table class="table" style="width:50%;">
-    <tr><td>Cursus:</td><td>{{ form.cursus.errors }}
-        {{ form.cursus }}
-    </td></tr>
-    <tr><td></td><td><input class="button success" type="submit" value="Filter"></td></tr>
+<h1> Member stats</h2>
+<h4>Gender Count</h4>
+<table class="table">
+    {% for k,v in gender.items %}
+        <tr><td class="small">{{ k }}</td><td>{{ v }}</td></tr>
+    {% endfor %}
 </table>
-</form>
-<h1>Statistics of {{ subject }}</h1>
-<table class="table" style="width:80%;">
-<thead>
-<tr>
-    <th>description</th>
-    <th>value</th>
-</tr>
-</thead>
-<tbody>
-{% for key, value in data.items %}
-<tr><td>{{ key }}</td><td>{{ value }}</td></tr>
-{% endfor %}
-</tbody>
+
+<h4>Student Count</h4>
+<table class="table">
+    {% for k,v in student.items %}
+        <tr><td class="small">{{ k }}</td><td>{{ v }}</td></tr>
+    {% endfor %}
 </table>
-</center>
+
+<h4>Institute Count</h4>
+<table class="table">
+    {% for k,v in institute.items %}
+        <tr><td class="small">{{ k }}</td><td>{{ v }}</td></tr>
+    {% endfor %}
+</table>
+
+<h4>Faculty Count</h4>
+<table class="table">
+    {% for k,v in studies.items %}
+        <tr><td class="small">{{ k }}</td><td>{{ v }}</td></tr>
+    {% endfor %}
+</table>
+
+
 {% endblock %}
