added graphs to stats

--- a/templates/templates/base.html
+++ b/templates/templates/base.html
@@ -26,6 +26,7 @@
                             <li><a href="{% url 'students:listall' "db" %}">Member details</a> </li>
                         </ul>
                     </li>
+		    <li><a href="{% url 'students:stats' %}">Stats</a></li>
                     <li><a href="{% url 'students:listsubmissions' %}">All submissions</a> </li>
                     <li>
                         <a href="#" class="dropdown-toggle">Verification System</a>
